@@ -10,6 +10,7 @@ import server.bazel.tree.WorkspaceTree;
 import server.bazel.tree.WorkspaceTree.Node;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -47,7 +48,7 @@ public class WorkspaceAPI {
         ArrayList<Path> allPossiblePaths = new ArrayList<>();
         List<Package> allPossiblePackages = findNodeOfGivenPackagePath(currentPath).getAllPackagesOfChildren();
         for(Package childPackage: allPossiblePackages){
-            allPossiblePaths.add(Path.of(childPackage.getPackageName()));
+            allPossiblePaths.add(Paths.get(childPackage.getPackageName()));
         }
         return allPossiblePaths;
     }
@@ -55,10 +56,10 @@ public class WorkspaceAPI {
     /**
      *
      * @param pathToPackage The path represented as a string to the package that contains possible Build Targets
-     *          expected format: BuildTarget Object where path is "Path.of(//path/to)" and label is null
+     *          expected format: BuildTarget Object where path is "Paths.get(//path/to)" and label is null
      *
      * @return A List of Paths, represented by a string, of each possible build target
-     *          expected output: list = {BuildTarget(Path.of(//path/to), "targetName", "kindValue)}
+     *          expected output: list = {BuildTarget(Paths.get(//path/to), "targetName", "kindValue)}
      * @throws WorkspaceAPIException if the pathToPackage is an invalid path within the given Workspace
      */
     public List<BuildTarget> findPossibleTargetsForPath(Path pathToPackage) throws WorkspaceAPIException {
@@ -74,7 +75,7 @@ public class WorkspaceAPI {
     /**
      *
      * @param targetToCheck The path, represented by a String, to the given build target
-     *          expected format: BuildTarget(Path.of(//path/to), "targetA", "kindValue")
+     *          expected format: BuildTarget(Paths.get(//path/to), "targetA", "kindValue")
      * @return true if the build target is stored in the workspace tree
      */
     public boolean isValidTarget(BuildTarget targetToCheck){
@@ -102,7 +103,7 @@ public class WorkspaceAPI {
     /**
      *
      * @param sourceFile The path, represented by a String, to the given build target
-     *          expected format: SourceFile object SourceFile("file.java", Path.of(//path/to/file.java))
+     *          expected format: SourceFile object SourceFile("file.java", Paths.get(//path/to/file.java))
      * @return true if the sourcefile is stored in the workspace tree at targetPath location
      */
     public boolean isSourceFileInPackage(SourceFile sourceFile){
@@ -125,7 +126,7 @@ public class WorkspaceAPI {
     /**
      *
      * @param file represents the file that is being searched for
-     * @return a Path object that represents Path.of(//path/to/BUILD)
+     * @return a Path object that represents Paths.get(//path/to/BUILD)
      * @throws WorkspaceAPIException If the source file does not exist on the worktree, this exception is thrown
      */
     public Path findPathToBUILDFromSourceFile(SourceFile file) throws WorkspaceAPIException {
@@ -138,7 +139,7 @@ public class WorkspaceAPI {
             }
             buildPathString.append("/BUILD");
         }
-        return Path.of(buildPathString.toString());
+        return Paths.get(buildPathString.toString());
 
     }
 
@@ -146,7 +147,7 @@ public class WorkspaceAPI {
 
     /**
      *
-     * @param path Accepts a path in the given format Path.of("//path/to/package")
+     * @param path Accepts a path in the given format Paths.get("//path/to/package")
      * @return the WorkspaceTree node that represents the given package
      * @throws WorkspaceAPIException if path is not in given workspace tree
      */
@@ -159,7 +160,7 @@ public class WorkspaceAPI {
             String pathSection = path.getName(i).toString();
             if(!pathSection.contains(".")){
                 Optional<Node> potentialNode = lastNode.getChild(pathSection);
-                if (potentialNode.isEmpty()) {
+                if (!potentialNode.isPresent()) {
                     throw new WorkspaceAPIException("Invalid Path");
                 } else {
                     lastNode = potentialNode.get();
